--- a/pom.xml
+++ b/pom.xml
@@ -1215,11 +1215,11 @@
         <product.identity.version>5.3.0-SNAPSHOT</product.identity.version>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.5.11-SNAPSHOT</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.6.0-SNAPSHOT</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
         <identity.carbon.auth.saml2.version>5.1.5</identity.carbon.auth.saml2.version>
-        <identity.inbound.auth.saml.version>5.1.3</identity.inbound.auth.saml.version>
+        <identity.inbound.auth.saml.version>5.1.4-SNAPSHOT</identity.inbound.auth.saml.version>
         <identity.inbound.auth.oauth.version>5.2.3</identity.inbound.auth.oauth.version>
         <identity.inbound.auth.openid.version>5.2.0</identity.inbound.auth.openid.version>
         <identity.agent.sso.version>5.1.3</identity.agent.sso.version>
