Removing the code that is moved to new repo https://github.com/wso2/carbon-identity-providers
Conflicts:
	pom.xml

--- a/product/pom.xml
+++ b/product/pom.xml
@@ -213,6 +213,21 @@
             <version>${carbon.deployment.version}</version>
             <type>zip</type>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.metrics</groupId>
+            <artifactId>org.wso2.carbon.metrics.core.feature</artifactId>
+            <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.metrics</groupId>
+            <artifactId>org.wso2.carbon.metrics.jdbc.core.feature</artifactId>
+            <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.metrics</groupId>
+            <artifactId>org.wso2.carbon.metrics.das.core.feature</artifactId>
+            <type>zip</type>
+        </dependency>
 
         <!-- Sample Simple Authentication Component -->
 
