--- a/pom.xml
+++ b/pom.xml
@@ -407,11 +407,6 @@
                 <scope>test</scope>
             </dependency>
             <!--End of Dependencies for Testing-->
-            <dependency>
-                <groupId>org.wso2.carbon.is</groupId>
-                <artifactId>carbon-is-osgi-tests-util</artifactId>
-                <version>${carbon.is.version}</version>
-            </dependency>
 
             <!-- Authentication and Authorization -->
             <dependency>
@@ -427,7 +422,7 @@
             <dependency>
                 <groupId>org.wso2.carbon</groupId>
                 <artifactId>org.wso2.carbon.container</artifactId>
-                <version>${carbon.kernel.version}</version>
+                <version>${carbon.container.version}</version>
             </dependency>
             <!--<dependency>-->
                 <!--<groupId>org.wso2.carbon</groupId>-->
@@ -557,6 +552,7 @@
         <carbon.jndi.version>1.0.0</carbon.jndi.version>
         <carbon.kernel.package.import.version.range>[5.1.0, 6.0.0)</carbon.kernel.package.import.version.range>
         <carbon.kernel.version>5.1.0</carbon.kernel.version>
+        <carbon.container.version>5.2.0-m2</carbon.container.version>
         <carbon.deployment.version>5.0.0</carbon.deployment.version>
         <carbon.is.version>6.0.0-SNAPSHOT</carbon.is.version>
         <carbon.messaging.version>1.0.6</carbon.messaging.version>
