--- a/pom.xml
+++ b/pom.xml
@@ -1218,9 +1218,11 @@
                 <version>${identity.local.auth.fido.version}</version>
             </dependency>
 
-            <!--dependencies from this point is used in p2 profile gen, added here to get them updated along with
- versions plugin (version plugin only reads the dependencies in dependencyManagement,
- and dependenies section-->
+            <!--
+                Dependencies from this point is used in p2 profile gen, added here to get them updated along with
+                versions plugin (version plugin only reads the dependencies in dependencyManagement,
+                and dependencies section)
+            -->
             <dependency>
                 <groupId>org.wso2.carbon.identity.carbon.auth.saml2</groupId>
                 <artifactId>org.wso2.carbon.identity.authenticator.saml2.sso.feature</artifactId>
@@ -1383,12 +1385,12 @@
     <properties>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.6.3</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.6.12</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
         <identity.carbon.auth.saml2.version>5.1.5</identity.carbon.auth.saml2.version>
         <identity.inbound.auth.saml.version>5.2.2</identity.inbound.auth.saml.version>
-        <identity.inbound.auth.oauth.version>5.2.3</identity.inbound.auth.oauth.version>
+        <identity.inbound.auth.oauth.version>5.2.5</identity.inbound.auth.oauth.version>
         <identity.inbound.auth.openid.version>5.2.0</identity.inbound.auth.openid.version>
         <identity.agent.sso.version>5.1.3</identity.agent.sso.version>
         <identity.inbound.auth.sts.version>5.1.5</identity.inbound.auth.sts.version>
@@ -1403,14 +1405,14 @@
         <identity.carbon.auth.iwa.version>5.1.4</identity.carbon.auth.iwa.version>
         <identity.workflow.template.multisteps.version>5.1.2</identity.workflow.template.multisteps.version>
         <identity.outbound.auth.requestpath.oauth.version>5.1.3</identity.outbound.auth.requestpath.oauth.version>
-        <identity.inbound.provisioning.scim.version>5.1.5</identity.inbound.provisioning.scim.version>
+        <identity.inbound.provisioning.scim.version>5.1.6</identity.inbound.provisioning.scim.version>
         <identity.tool.samlsso.validator.version>5.1.2</identity.tool.samlsso.validator.version>
         <identity.data.publisher.authentication.version>5.1.3</identity.data.publisher.authentication.version>
-        <identity.data.publisher.oauth.version>0.1.1</identity.data.publisher.oauth.version>
+        <identity.data.publisher.oauth.version>0.1.3</identity.data.publisher.oauth.version>
         <identity.data.publisher.audit.version>0.1.1</identity.data.publisher.audit.version>
         <!--<identity.carbon.auth.thrift.version>5.5.0-SNAPSHOT</identity.carbon.auth.thrift.version>-->
         <!--<identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>-->
-        <identity.governance.version>0.1.10</identity.governance.version>
+        <identity.governance.version>0.1.11</identity.governance.version>
         <org.wso2.carbon.identity.auth.version>0.1.0</org.wso2.carbon.identity.auth.version>
         <identity.event.handler.account.lock.version>1.0.0</identity.event.handler.account.lock.version>
         <identity.event.handler.notification.version>0.1.3</identity.event.handler.notification.version>
